--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
         align-items: center;
       }
 
-      .loader{
+      .loading-icon{
         height: 100px;
         width: 100px;
         background-image: url(./images/icon-loading.svg);
@@ -42,7 +42,7 @@
     <script>
       const rootContainer = document.getElementById('root')
       const container = document.createElement('DIV')
-      container.className = 'loader'
+      container.className = 'loading-icon'
       rootContainer.appendChild(container)
     </script>
   </body>
