--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,10 +21,10 @@
         background-image: url(./images/icon-loading.svg);
         background-repeat: no-repeat;
         background-size: contain;
-        animation: circleFull 2.2s linear infinite;
+        animation: initLoadingAnimation 2.2s linear infinite;
       }
 
-      @keyframes circleFull {
+      @keyframes initLoadingAnimation {
         from {
             transform: rotate3d(0, 0, 1, -180deg);
         }
