--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
     <title>Mail verifyer</title>
     <style>
       #root{
+        width: 100%;
+        height: 100vh;
+      }
+
+      .loading-container{
         width: 100%;
         height: 100vh;
         display: flex;
@@ -15,7 +20,7 @@
         align-items: center;
       }
 
-      .loading-icon{
+      .loading-container__icon{
         height: 100px;
         width: 100px;
         background-image: url(./images/icon-loading.svg);
@@ -42,7 +47,10 @@
     <script>
       const rootContainer = document.getElementById('root')
       const container = document.createElement('DIV')
-      container.className = 'loading-icon'
+      const loadingIcon = document.createElement('DIV')
+      loadingIcon.className = 'loading-container__icon'
+      container.className = 'loading-container'
+      container.appendChild(loadingIcon)
       rootContainer.appendChild(container)
     </script>
   </body>
